# vinyl-dj-library

./: .env.example  .gitignore  CLAUDE.md  README.md  probe_deezer.py  pyproject.toml  start.sh
api/: main.py
api/routes/: analyze.py  enrich.py  release.py  search.py  sync.py  system.py  tap_bpm.py  track.py
db/: models.py  session.py
docs/: ARCHITECTURE_CURRENT.md  ARCHITECTURE_TARGET.md  DECISIONS.md  ROADMAP.md
enrich/: audio_analysis.py  camelot.py  pipeline.py
enrich/sources/: base.py  beatport.py  getsongbpm.py
sync/: discogs_sync.py
tests/: conftest.py  test_analyze.py  test_audio_analysis.py  test_browse.py  test_camelot.py  test_discogs_sync.py  test_getsongbpm.py  test_index.py  test_pipeline.py  test_release.py  test_search.py  test_sync_enrich_routes.py  test_system.py  test_tap_bpm.py  test_track.py  test_track_detail.py
web/static/: clip-analysis.js  style.css  tap-bpm.js
web/templates/: base.html  index.html  release.html  tap_bpm.html
web/templates/partials/: bpm_key_cell.html  release_list.html  results.html  shutdown.html
