[project]
name = "vinyl-dj-library"
version = "0.1.0"
description = "Local-first BPM/key lookup tool for an owned vinyl collection, synced from Discogs."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "sqlmodel>=0.0.16",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
audio = [
    "librosa>=0.10",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["api*", "sync*", "enrich*", "db*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
